--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,2 +1,6 @@
 <div class="gallery"></div>
+<p class="end-search is-hidden">
+  We're sorry, but you've reached the end of search results.
+</p>
+<div class="js-guard"></div>
 <button type="button" class="load-more is-hidden">Load more</button>
